# sesame

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  THREAT_MODEL.md  vault.db
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: release.yml
src/: catalog.rs  crypto.rs  db.rs  items.rs  main.rs  util.rs
