[package]
name = "sesame"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
getrandom = "0.2"
argon2 = "0.5"
# chacha20poly1305 = { version = "0.10", features = ["xchacha20"] }
chacha20poly1305 = "0.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7"
clap = { version = "4", features = ["derive"] }
